# gemini-pr-review-py

./: .coderabbit.yaml  .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/: nginx-gemini-review.conf
scripts/: install_local_review.sh  local_review_env.example.sh  run_webhook_server.sh  send_test_webhook.sh
src/gemini_review/: __init__.py  config.py  logging_utils.py  main.py
src/gemini_review/application/: review_pr_use_case.py  webhook_handler.py
src/gemini_review/domain/: __init__.py  file_dump.py  finding.py  posted_review_comment.py  pull_request.py  review_result.py
src/gemini_review/infrastructure/: cross_pr_finding_deduper.py  diff_based_resolution_checker.py  diff_parser.py  file_dump_collector.py  gemini_cli_engine.py  gemini_parser.py  gemini_prompt.py  git_repo_fetcher.py  github_app_client.py  source_grounded_finding_verifier.py
src/gemini_review/interfaces/: __init__.py  file_collector.py  finding_deduper.py  finding_resolution_checker.py  finding_verifier.py  github_client.py  repo_fetcher.py  review_engine.py
tests/unit/: test_cross_pr_finding_deduper.py  test_diff_based_resolution_checker.py  test_diff_parser.py  test_file_dump_collector.py  test_gemini_auth_preflight.py  test_gemini_parser.py  test_gemini_prompt.py  test_git_repo_fetcher.py  test_github_app_client.py  test_github_app_client_tls.py  test_review_result.py  test_source_grounded_finding_verifier.py  test_webhook_handler.py
